# BBSAchieve

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.web  docker-compose.dev.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/scripts/: record_board_page_fixtures.py  record_thread_page_fixtures.py
backend/src/byr_api/: __init__.py  app.py  auth.py  models.py
backend/src/byr_auth/: AGENTS.md  __init__.py  __main__.py  client.py  encoding.py  models.py  store.py
backend/src/byr_boards/: AGENTS.md  __init__.py  homepage_models.py  homepage_parser.py  models.py  parser.py  service.py
backend/src/byr_cli/: __init__.py
backend/src/byr_sync/: __init__.py  cache.py  models.py  service.py
backend/src/byr_threads/: AGENTS.md  __init__.py  models.py  parser.py  service.py
backend/tests/fixtures/board_page/: README.md  iwhisper_page_1.html  iwhisper_page_134.html
backend/tests/fixtures/homepage/: byr_default.html
backend/tests/fixtures/thread_page/: README.md  iwhisper_article_5738890_page_1.html  iwhisper_article_8830220_page_1.html  iwhisper_article_8830220_page_2.html  iwhisper_article_8846213_page_1.html
backend/tests/unit/byr_api/: test_app.py
backend/tests/unit/byr_auth/: test_client.py  test_store.py
backend/tests/unit/byr_boards/: test_homepage_parser.py  test_parser.py  test_service.py
backend/tests/unit/byr_cli/: test_cli.py
backend/tests/unit/byr_sync/: test_cache.py  test_service.py  test_throttle.py
backend/tests/unit/byr_threads/: test_thread_parser.py  test_thread_service.py
design/: BYR Achieve Mobile.html  BYR Achieve.html  app.jsx  (+7 more)
(+265 files in other folders)
