[project]
name = "byr-auth"
version = "0.1.0"
description = "Minimal BYR BBS authentication client"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[project.scripts]
byr-auth = "byr_auth.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
